Organiza pastas e foto de perfil

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <li><a href="#competencias">Competências</a></li>
     </ul>
     <div id="credenciais">
-        <img src="_images/Perfil.jpeg" alt="Selfie de Piedro Rockembach Nunes" width="120px">
-        <a href="_images/Perfil.jpeg" target="_blank">abrir foto</a>
+        <img src="images/piedro-perfil.png" alt="Selfie de Piedro Rockembach Nunes" width="120px">
+        <a href="images/Perfil.jpeg" target="_blank">abrir foto</a>
     
     
         <h1>Piedro Rockembach Nunes</h1>
