--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
     <title>Portifolio</title>
 </head>
 <body>
-    <h1>Meu Portifolio</h1>
-    <h3>Indice</h3>
+    <header>
+
+    
+    
+    <div id="div-menu">
     <ul>
-        <li><a href="#credenciais">Meus credenciais</a></li>
-        <li><a href="#descricao">Quem é Piedro</a></li>
-        <li><a href="#competencias">Competências</a></li>
+        <li id="menu-id"><a href="#credenciais">Meus credenciais</a></li>
+        <li id="menu-description"><a href="#descricao">Quem é Piedro</a></li>
+        <li id="menu-competences"><a href="#competencias">Competências</a></li>
     </ul>
+    </div>
+    </header>
+    <h1>Meu Portifolio</h1>
     <div id="credenciais">
         <img src="images/piedro-perfil.png" alt="Selfie de Piedro Rockembach Nunes" width="120px">
         <a href="images/Perfil.jpeg" target="_blank">abrir foto</a>
