--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     
     <section class="section-body">
-        <h1>Piedro Rockembach Nunes</h1>
+        <div id="title"><h1>Piedro Rockembach Nunes</h1></div>
         <div id="credenciais">
             <img src="images/piedro-perfil.png" alt="Selfie de Piedro Rockembach Nunes" width="120px" id="-piedro-picture">
             <a href="images/Perfil.jpeg" target="_blank">abrir foto</a>
