organiza Minhas Habilidades

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
         
             <div id="piedro-description">
-            <h2>Quem é Piedro:</h2>
+            <h2>Quem é Piedro</h2>
             <br>
             <p>Sou brasileiro, nasci e cresci em <em>Pelotas-RS</em>.
             <br>
@@ -55,7 +55,8 @@
         </div>
         </div>
         <div id="competencias">
-            <h2>Minhas habilidades:</h2>
+            <h2>Minhas habilidades</h2>
+            <br>
             <ul>
                 <li>Inglês Intermediário/Avançado</li>
                 <li>HTML Intermediário</li>
